--- a/.github/workflows/build-yattee.yml
+++ b/.github/workflows/build-yattee.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest  # Required for Xcode and Apple toolchain
+    runs-on: macos-14  # Required for Xcode and Apple toolchain
 
     steps:
       - name: Checkout repository
