Configure code signing environment variables
Add environment variables for code signing in the build workflow

--- a/.github/workflows/build-yattee.yml
+++ b/.github/workflows/build-yattee.yml
@@ -7,6 +7,10 @@ on:
     branches: [ main ]
   workflow_dispatch:  # Allows manual triggering from the GitHub UI
 
+env:
+  CODE_SIGN_IDENTITY: ""
+  CODE_SIGNING_REQUIRED: NO
+
 jobs:
   build:
     runs-on: macos-14  # Required for Xcode and Apple toolchain
